fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
  padding: 0;
  clear: left;
  overflow-y: auto;
+ overflow-x: hidden;
  margin: 0;
 }
   
